--- a/TASK-4-Keefer Law Firm/Index.html
+++ b/TASK-4-Keefer Law Firm/Index.html
@@ -13,7 +13,7 @@
       <img src="images/logo.png" alt="Keefer Law Firm">
     </div>
     <div class="contact-info">
-      <h3>CALL OUR OFFICES NOW!</h3>
+      <h2>CALL OUR OFFICES NOW!</h2>
       <h1>540.433.6906</h1>
       <p>Get Your Questions Answered Fast</p>
     </div>
@@ -74,19 +74,22 @@
     <img src="images/paste_board.gif" alt="Case Evaluation" class="info-icon">
     <p>Being charged with a DUI <br>can be scary. Get the help<br> you deserve.</p>
     <p>Click here to let us know<br> how we can help you with<br> your case.</p>
+    <img src="images/lf_bt_hr_shadow.png" alt="hr shadow" class="shadow-line">
     <a href="#" class="btn-red">CLICK HERE <img src="images/bullet_white_lrg.png" alt="bullet " class="bullet-white"></a>
   </div>
 
   <!-- BOX 2 -->
   <div class="info-box law-box">
-    <h3 class="red-title">LAW BLOG</h3>
+    <h3 class="red-title1">LAW BLOG</h3>
     <p>Learn more about<br>Virginia Traffic Laws.</p>
     <img src="images/pic1.gif" alt="Law Blog" class="info-icon">
+    <img src="images/lf_bt_hr_shadow.png" alt="hr shadow" class="shadow-line">
     <a href="#" class="btn-red">CLICK HERE <img src="images/bullet_white_lrg.png" alt="bullet " class="bullet-white"></a>
-    
-    <h3 class="red-title" style="margin-top: 30px;">CASE RESULTS</h3>
+    <br>
+    <h3 class="red-title">CASE RESULTS</h3>
     <p>See how we help our clients.<br>Read our latest case results.</p>
     <img src="images/order_icon.gif" alt="Case Results" class="info-icon">
+    <img src="images/lf_bt_hr_shadow.png" alt="hr shadow" class="shadow-line">
     <a href="#" class="btn-red">CLICK HERE <img src="images/bullet_white_lrg.png" alt="bullet " class="bullet-white"></a>
   </div>
 
@@ -96,9 +99,12 @@
     <img src="images/national_college_small.gif" alt="National College" class="credential-badge">
     <h3 class="red-title">CERTIFICATES &<br>CREDENTIALS</h3>
     <p>Keefer Law Firm has protected the<br>rights of Virginians for over 30 years.</p>
-    <a href="#" class="btn-red">LEARN MORE <img src="images/bullet_white_lrg.png" alt="bullet " class="bullet-white-l"></a>
+    <img src="images/lf_bt_hr_shadow.png" alt="hr shadow" class="shadow-line">
+    <a href="#" class="btn-red">LEARN MORE <img src="images/bullet_white_lrg.png" alt="bullet " class="bullet-white"></a>
   </div>
 </section>
+
+<img src="images/hr_shadow.png" alt="hr shadow" class="shadow-2">
   <!-- Main Content -->
   <section class="main-content">
     <!-- Left Sidebar -->
@@ -141,18 +147,21 @@
       <div class="widget">
         <h3> CLIENT<br>TESTIMONIALS</h3>
         <p>Read what others say<br>about Keefer Law Firm.</p>
+        <img src="images/lf_bt_hr_shadow.png" alt="hr shadow" class="shadow-line">
         <a href="#" class="btn-red">CLICK HERE <img src="images/bullet_white.gif" alt="bullet " class="bullet-small"></a>
       </div>
 
       <div class="widget">
         <h3> DOWNLOAD<br>FREE REPORTS</h3>
         <p>Discover the truth about<br>Virginia Law.</p>
+        <img src="images/lf_bt_hr_shadow.png" alt="hr shadow" class="shadow-line">
         <a href="#" class="btn-red">CLICK HERE <img src="images/bullet_white.gif" alt="bullet " class="bullet-small"></a>
       </div>
 
       <div class="widget">
         <h3>CONTACT OUR<br>OFFICES</h3>
         <p>Get your questions<br>answered right now.</p>
+        <img src="images/lf_bt_hr_shadow.png" alt="hr shadow" class="shadow-line">
         <a href="#" class="btn-red">CLICK HERE <img src="images/bullet_white.gif" alt="bullet " class="bullet-small"></a>
       </div>
 
@@ -166,6 +175,7 @@
       <div class="widget">
         <h4>FOLLOW US</h4>
         <img src="images/lf_bt_hr_shadow.png" alt="hr shadow" class="shadow-line">
+        <br>
         <div class="social-icons">
           <a href="#"><img src="images/fb_icon.gif" alt="Facebook"></a>
           <a href="#"><img src="images/google_icon.gif" alt="Google+"></a>
